2023-09-03: Ver. 0.2-2
  * Remove the meta table from the doc.

2021-02-08: Ver. 0.2-1
  * Move DMAT related functions to inst/R_dmat/.

2018-02-01: Ver. 0.2-0
  * Add ‘R_registerRoutines’, ‘R_useDynamicSymbols’.

2016-12-17: Ver. 0.1-8
  * Change web address.

2015-11-01: Ver. 0.1-7
  * Change SPMD.CT$* to .pbd_env$SPMD.CT$*.

2014-06-21: Ver. 0.1-7
  * Migrate to MS-MPI.
  * Get rid of jss.cls and jss.bst.
  * Add pbdSLAP, pbdBASE, pbdDMAT back to dependent and import.

2014-02-02: Ver. 0.1-6
  * Add I/O demo to read data and dump clustering results.

2013-07-03: Ver. 0.1-6
  * Move inst/doc/vignettes/ to vignettes/.

2013-07-02: Ver. 0.1-5
  * Add high-level functions "pmclust" and "pkmeans".
  * Add man page and vignettes.
  * Add PiLow to generate.MixSim.
  * Add GBD data type.
  * Move vignettes.

2013-03-25: Ver. 0.1-4
  * Add dmat_* functions/methods to fully utilize pbdR capability, only the
    k-means algorithm is working.
  * Add demo and man for dmat_* methods.

2012-10-21: Ver. 0.1-3
  * Change to apecm and apecma.
  * Switch to pbdMPI.
  * rlecuyer is added.
  * MixSim is added to generate data for simulation.
  * Add load.balance functions.
  * Fix .GlobalEnv problem.
  * Fix .Last.lib problem.

======================== Log Before Release ===================================
2012-02-07:
  * Add K-means, manual, and guide for release.

2012-01-23:
  * Add aecm, apecm1, and apecm2 and part of C code to boost computing.

2012-01-04:
  * Initial the package for release.

2011-09-13:
  * Initial code.