@@ -185,7 +185,7 @@ em.step.spmd <- function(PARAM.org){
 
     ### Start EM here.
     PARAM.new <- try(em.onestep.spmd(PARAM.org))
-    if(class(PARAM.new) == "try-error" || is.nan(PARAM.new$logL)){
+    if(inherits(PARAM.new, "try-error") || is.nan(PARAM.new$logL)){
       comm.cat("Results of previous iterations are returned.\n", quiet = TRUE)
       .pmclustEnv$CHECK$convergence <- 99
       PARAM.new <- PARAM.org
